# getpycomic

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
getpycomic/: cli.py  controller.py  downloader.py  imagehandler.py  models.py  utils.py
getpycomic/drivers/plugins/: uBlock0_1.63.3rc2.firefox.signed.xpi
getpycomic/engines/: selenium.py  selenium0.py
getpycomic/pages/: novelcool.py  tmomanga.py  zonatmo.py
src/: __init__.py  chapter_by_volume.py  controller.py  data.json  downloader.py  errorhandlerdecorator.py  imagehandler.py  models.py  pathclass.py  requests_data.py  sorter_volume_chapter.py  status.py  utils.py  ziphandler.py
src/engines/: __init__.py  base.py  selenium.py  thread_selenium.py
src/pages/: __init__.py  base.py  novelcool.py  tmomanga.py  zonatmo.py
tests/: chapter_by_volume.py  test_chapter_by_volume.py  test_normalize_number.py  test_selenium.py  test_sorter_volume_chapter.py  test_utils.py
