[tool.poetry]
name = "getpycomic"
version = "0.1.0"
description = ""
authors = ["kurotom <55354389+kurotom@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.22.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pillow = "^10.4.0"
platformdirs = "^4.3.7"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
